syntax = "proto3";

package aelf;

import "aelf/options.proto";

option csharp_namespace = "AElf.Contracts.MultiToken";

service TransactionFee {
}

// Messages

message TransactionSizeFeeSymbols
{
    repeated TransactionSizeFeeSymbol transaction_size_fee_symbol_list = 1;
}

message TransactionSizeFeeSymbol
{
    string token_symbol = 1;
    sint32 base_token_weight = 2;
    sint32 added_token_weight = 3;
}

message TotalTransactionFeesMap
{
    map<string, sint64> value = 1;
}

message TotalResourceTokensMap
{
    map<string, sint64> value = 1;
}

// Events

message TransactionFeeCharged {
    option (aelf.is_event) = true;
    string symbol = 1;
    sint64 amount = 2;
}

message ResourceTokenCharged {
    option (aelf.is_event) = true;
    string symbol = 1;
    sint64 amount = 2;
}

message ResourceTokenOwned {
    option (aelf.is_event) = true;
    string symbol = 1;
    sint64 amount = 2;
}